# ohm-rule-engine

./: .gitignore  Makefile.am  acinclude.m4  autogen.sh  configure.ac  configure.in  libprolog.pc.in
build-aux/: git-version-gen
datalibs/: Makefile.am  factmap.c  libfact.pc.in  libfactmap.pc.in  librelation.pc.in  libset.pc.in  ohm-fact.c  ohm-fact.c.new  ohm-factstore.c  relation.c  set.c
debian/: changelog  control  control.in  libfact.install  libprolog-dev.install  libprolog.install  libprolog0.install  ohm-plugin-prolog.install  prolog-extensions.install  rules
doc/: Doxyfile  Makefile.am
doc/ohm-plugin/lyx/: prefix  prolog_plugin.lyx
doc/prolog/lyx/: prefix  prolog_library.lyx
extensions/: Makefile.am  pl_fact.c  pl_relation.c  pl_set.c  relation.c  set.c
fedora/: Makefile  libprolog.spec.in  prolog.spec.in
include/: Makefile.am
include/prolog/: factmap.h  list.h  ohm-fact.h  ohm-fact.h.new  ohm-factstore.h  prolog.h  relation.h  set.h
ohm-plugin/: Makefile.am  prolog.c  rule-engine.c  rule_engine.ini  rule_engine.ini.in
rpm/: ohm-plugin-ruleengine.changes  ohm-plugin-ruleengine.spec  ohm-plugin-ruleengine.yaml
src/: Makefile.am  config.h.in  libprolog-allocator.h  libprolog.h  libprolog.pl  prolog-lib.c  prolog-loader.c  prolog-log.c  prolog-object.c  prolog-predicate.c  prolog-shell.c  prolog-trace.c  prolog-utils.c  prolog.c
test/: Makefile.am  facttest.c  libtest.pl  prologtest.c
tests/: Makefile.am  check-libprolog-init.c  check-libprolog-memleak.c  check-libprolog-predicate.c  check-libprolog.c  check-libprolog.h  predicates.pl  predtest.pl  syntax-error.pl  syntax-ok.pl
