#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(prolog, 0.0.1)
AC_CONFIG_SRCDIR(src)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADER([config.h])

# libtool
LT_CURRENT=2
LT_REVISION=0
LT_AGE=0
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# Disable static libraries.
AC_DISABLE_STATIC

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_CC_C_O
AM_PROG_LIBTOOL

# Checks for libraries.


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gettimeofday memset putenv strdup strtoul])

# Checks for glib and gobject.
PKG_CHECK_MODULES(GLIB, glib-2.0 gobject-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

# libohmfact
PKG_CHECK_MODULES(LIBOHMFACT, libohmfact)
AC_SUBST(LIBOHMFACT_CFLAGS)
AC_SUBST(LIBOHMFACT_LIBS)


# libpolicy/prolog support

AC_ARG_WITH(prolog, [  --with-prolog=<SWI prolog binary>   where the SWI prolog main binary is installed])

if test -z "$with_prolog" ; then
  if which pl >& /dev/null; then
    PLBIN="`which pl`"
  else
    if which swipl >& /dev/null; then
      PLBIN="`which swipl`"
    else
        AC_MSG_ERROR([SWI prolog binary not found])
    fi
  fi
else
  PLBIN="$with_prolog"
fi


PLDUMP="$PLBIN -dump-runtime-variables"
PLDIR=$(eval `$PLDUMP`; echo $PLBASE)
PLARCH=$(eval `$PLDUMP`; echo $$LARCH)
PLLIBS=$(eval `$PLDUMP`; echo $PLLIBS $PLDIR/lib/$PLARCH/libpl.a)

PLCFLAGS=$(eval `$PLDUMP`; echo $PLCFLAGS -I$PLDIR/include)
PLLDFLAGS=$(eval `$PLDUMP`; echo $PLLDFLAGS)

PROLOG_HOME="$PLDIR"
PROLOG_CFLAGS="$PLCFLAGS"
PROLOG_LDFLAGS="$PLLDFLAGS $PLLIBS"

AC_SUBST(PROLOG_LDFLAGS)
AC_SUBST(PROLOG_CFLAGS)
AC_SUBST(PROLOG_HOME)



AC_CONFIG_FILES([Makefile
                 src/Makefile
		 libprolog.pc
		 include/Makefile
		 extensions/Makefile
		 test/Makefile])
AC_OUTPUT
