libprologincludedir = $(includedir)/prolog

libprologinclude_HEADERS = prolog/prolog.h   \
                           prolog/list.h     \
                           prolog/relation.h \
                           prolog/set.h      \
                           prolog/factmap.h  \
                           prolog/ohm-fact.h

clean-local:
	rm -f *~
