libprologincludedir = $(includedir)/prolog

libprologinclude_HEADERS = prolog/prolog.h   \
                           prolog/list.h     \
                           prolog/ohm-fact.h \
                           prolog/ohm-factstore.h
#                          prolog/relation.h \
#                          prolog/set.h      \
#                          prolog/factmap.h


clean-local:
	rm -f *~
